# SDLWrap2

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: idea-feature-request.md
.github/workflows/: cmake-single-platform.yml
lib/: SDL3.lib
src/: cppSDL.cpp  cppSDL.hpp  cppSDLEvent.cpp  cppSDLEvent.hpp  cppSDLWindow.cpp  cppSDLWindow.hpp
test/: test.cpp
